<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/shouldBlur"
        android:title="Blur"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/shouldScale"
        android:title="Mist tunnel effect"/>

    <frowningrabbit.soulviewer.SeekBarPreference
        android:defaultValue="100"
        android:dialogMessage=""
        android:key="@string/rotationSpeed"
        android:max="400"
        android:summary="The speed of the rotation"
        android:text="%"
        android:title="Rotation speed"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/useForegroundColor"
        android:summary="Use a single color for the coral "
        android:title="Use single color"/>

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        alphaSlider="false"
        android:defaultValue="@color/colorPrimaryDark"
        android:key="@string/foregroundColor"
        android:summary="@string/color1_summary"
        android:title="@string/color1_title"/>

    <PreferenceCategory android:title="Advanced knobs and dials">
        <ListPreference
            android:defaultValue="SRC"
            android:entries="@array/xferModes"
            android:entryValues="@array/xferModes"
            android:key="@string/drawXferMode"
            android:summary="Current: %s"
            android:title="Pixel draw mode"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/detailOptions"
            android:entryValues="@array/listValues"
            android:key="@string/renderDetail"
            android:summary="Current: %s"
            android:title="Output Detail"/>

    </PreferenceCategory>
</PreferenceScreen>